--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <div class="col-lg-5 mt-5 mt-lg-0 d-flex justify-content-center">
             <!-- تم استبدال placeholder بصورة فعلية -->
             <img
-              src="https://via.placeholder.com/200"
+              src="/imgaes/khadija1.jpeg"
               alt="خديجة الراقرقي"
               class="profile-image"
             />
